# libsql-ocaml

./: .gitignore  README.md  dune-project  generate_flags.sh  libsql.opam
lib/: c_flags.sexp  client.ml  connection.ml  dune  gen_c_flags.ml  hrana_decode.ml  hrana_encode.ml  hrana_types.ml  libsql.ml  libsql_bindings.ml  libsql_stub.c  libsql_stubs.c  pool.ml  transport.ml  websocket_eio.txt
rust-bindings/: .gitignore
test/: dune  test_encode.ml  test_hrana_decode.ml  test_libsql.ml
