; (foreign_library
;  (archive_name libsql_macosx_arm64)
;  (language c)
;  (enabled_if
;   (and
;    (= %{system} macos)
;    (= %{architecture} arm64)))
;  (names))

; (foreign_library
;  (archive_name libsql_linux_amd64)
;  (language c)
;  (enabled_if
;   (and
;    (= %{system} linux)
;    (= %{architecture} amd64)))
;  (names))

; (foreign_library
;  (archive_name libsql_linux_arm64)
;  (language c)
;  (enabled_if
;   (and
;    (= %{system} linux)
;    (= %{architecture} arm64)))
;  (names))

(library
 (name libsql)
 (modes native)
 (public_name libsql)
 (modules libsql libsql_bindings)
 (libraries ctypes ctypes.foreign)
 (foreign_archives libsql_macosx_arm64))
